[package]
name = "convo"
version = "0.1.0"
authors = ["finnkauski <iwiivi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger="*"
actix-web = "*"
actix-rt = "*"
actix-files = "*"
serde = "*"
rust-bert = "*"
